# weave

./: .dockerignore  .gitignore  .landmark.yml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  VISION.md  fly.toml
.agents/skills/weave-mcp/: SKILL.md
.github/workflows/: pages.yml  verify.yml
apps/fleet-retro/: Cargo.toml
apps/fleet-retro/src/: assemble.rs  citation_gate.rs  main.rs  pack.rs  publish.rs  render.rs  secrets.rs  spec.rs  synthesis.rs  text.rs  window.rs
apps/fleet-retro/src/sources/: bb.rs  feed.rs  git.rs  mod.rs  moments.rs  powder.rs  receipts.rs
apps/release-events/: Cargo.toml  Dockerfile
apps/release-events/src/: main.rs
apps/weave-mcp/: Cargo.toml
apps/weave-mcp/src/: fleet_retro.rs  lib.rs  main.rs  release_events.rs
backlog.d/: 001-composition-contracts.md  002-remote-and-review-primitive-research.md  003-aesthetic-kit.md  004-sdlc-organ-promotion-criteria.md  005-doc-sync-flow.md  006-ci-auditor-flow.md  007-fix-stale-one-contract-claims.md  008-work-item-proposal-unknown-major-fixture.md  009-reconcile-schema-registry-shape-docs.md  010-broaden-valid-fixture-coverage.md  011-schema-changelog.md  012-consumer-conformance-kit.md  013-five-faces-adoption.md  014-fleet-self-reporting-organs.md  015-weave-as-service-bridge-first-class.md  016-adopt-lucide-layers-as-the-weave-wordmark-icon.md
docs/: app-icons.md  ci-auditor-flow.md  composition-contracts.md  consumer-conformance-kit.md  doc-sync-flow.md  fleet-retro.md  how-the-loop-runs.md  onboarding.md  release-event-receiver.md  remote-and-review-primitives.md  remote-event-projection.md  request-input-context.md  schema-changelog.md  sdlc-organ-promotion.md  seam-reference.md  stacked-diff-discipline.md  the-five-faces.md
docs/fixtures/contracts/: landmark.release-kit.v1.missing-schema-version.json  landmark.release-kit.v1.thread-release.json  landmark.release-kit.v1.unknown-major.json  powder.card_event.v1.card-created.json  powder.card_event.v1.completed.json  powder.card_event.v1.missing-schema-version.json  powder.card_event.v1.moved-to-ready.json  powder.card_event.v1.unknown-major.json  weave.release_feed_row.v1.landmark-release-kit.json  weave.release_feed_row.v1.missing-schema-version.json  weave.release_feed_row.v1.unknown-major.json  weave.remote_event.v1.forgejo-pr-opened.json  (+20 more)
docs/schemas/: landmark.release-kit.v1.schema.json  powder.card_event.v1.schema.json  weave.release_feed_row.v1.schema.json  weave.remote_event.v1.schema.json  weave.work_item_proposal.v1.schema.json
scripts/: consumer-conformance-kit.cjs  remote-event-conformance.cjs  thread-drill.sh  thread-replay.cjs  validate-contracts.cjs  verify.sh
site/: DESIGN.md  aesthetic.css  changelog.html  index.html  marketing.css  marketing.js  mode.js  theme.js
(+2 files in other folders)
