[package]
name = "weave-mcp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "weave-mcp"
path = "src/main.rs"

[dependencies]
serde_json = "1.0.150"
ureq = { version = "2.12.1", features = ["json"] }

[dev-dependencies]
tempfile = "3.20.0"
